# Distribution-Platform-for-Perishable-Goods

./: .gitignore  .ruff.toml  README.md  calculo_camiones.py  calculo_rutas.py  main copy.py  main.py  pyproject.toml
data/raw/: dboClientes.csv  dboDestinos.csv  dboProductos.csv
data/storage/: camiones.json  camiones_personalizados.json  coordinates.json  custom_trucks.json  large_medium_trucks.json
distribution_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
distribution_platform/app/: main.py
distribution_platform/app/components/: __init__.py  cards.py  charts.py  displays.py  export.py  forms.py  images.py  loaders.py
distribution_platform/app/config/: constants.py
distribution_platform/app/services/: data_service.py  export_service.py  optimization_service.py  validation_service.py
distribution_platform/app/state/: session_manager.py
distribution_platform/app/user_interface/: routes.py  ui_components.py
distribution_platform/app/views/: __init__.py  form_view.py  processing_view.py  results_view.py  splash_view.py
distribution_platform/assets/styles/: components.css  theme.py
distribution_platform/batch/backup/: backup.py
distribution_platform/config/: enums.py  logging_config.py  paths.py  settings.py
distribution_platform/core/inference_engine/: engine.py
distribution_platform/core/knowledge_base/: rules.py
distribution_platform/core/logic/: clustering.py  data_cleaner.py  graph.py  order_processing.py
distribution_platform/core/models/: optimization.py  order.py  result_validation.py  truck.py
distribution_platform/core/services/: __init__.py  etl_service.py  gestor_clustering.py  gestor_grafo.py  modelos.py  optimizador_rutas.py  optimizador_sistema.py  optimization_orchestrator.py  utils_pedidos.py
distribution_platform/correlations/: app_correaltions.py
distribution_platform/dashboard/: app.py  registry.py
distribution_platform/dashboard/config/: config_dashboard.py
distribution_platform/dashboard/correlations/: app_correaltions.py  bridge_loader.py  layout.py  visualizations.py
distribution_platform/dashboard/database/: queries.py
distribution_platform/dashboard/front/: routes.py
distribution_platform/dashboard/styles/: components.css
distribution_platform/data/processed/: pedidos.csv
distribution_platform/data/raw/: dboLineasPedido.csv  dboPedidos.csv  dboProvincias.csv
distribution_platform/infrastructure/database/: connection.py  queries.py  repository.py  sql_client.py
distribution_platform/infrastructure/etl/: etl_pipeline.py
distribution_platform/infrastructure/maps/: maps.py
distribution_platform/infrastructure/persistence/: coordinates.py  file_reader.py  truck_repository.py
distribution_platform/models/: order.py  truck.py
distribution_platform/pipelines/: etl_pipeline.py  preprocessing_pipeline.py
distribution_platform/utils/: coordinates_cache.py  correaltions.py  data_aggregator.py  data_analysis.py  data_cleaning.py  data_loaders.py  data_visualizers.py  enums.py  etl.py  geolocator.py  helper.py  process_audio.py  process_text.py
proyecto1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: ejecutar_etl.py
tests/app/: test_main.py
tests/app/components/: test_cards.py  test_displays.py  (+4 more)
tests/config/: test_config.py  test_logging.py
(+54 files in other folders)
